[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/Mode_HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="Meteor_Shower_HUD" type="Node2D"]
z_index = 2
script = ExtResource( 2 )

[node name="Score_lbl" type="Label" parent="."]
margin_left = 192.0
margin_top = 8.0
margin_right = 448.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_lbl" type="Label" parent="."]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 2 )
text = "Meteor Shower"
align = 1
valign = 1

[node name="Over_lbl" type="Label" parent="."]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 2 )
text = "Meteor Shower Ended"
align = 1
valign = 1
